Locked saved builds column high in favor of overview and stretch prevention

--- a/src/components/main/gearcalculator/savedbuilds/SavedBuilds.module.css
+++ b/src/components/main/gearcalculator/savedbuilds/SavedBuilds.module.css
@@ -2,7 +2,7 @@
   position: relative;
   width: 250px;
   /* height: 590px; */
-  min-height: 100%;
+  max-height: 770px;
   border-radius: 0.4rem;
   background: rgb(32, 46, 57);
 }
